--- a/sass/_Settings.scss
+++ b/sass/_Settings.scss
@@ -1,10 +1,6 @@
 .CoveoSettings {
   float: right;
   margin: 0 0 0 36px;
-  border-radius: 50%;
-  border: $default-border;
-  width: 40px;
-  height: 40px;
   top: 5px;
   position: relative;
   cursor: pointer;
